--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,6 @@
   <a href="/profile">Profile</a>
 </div>
 
-<br /><a href="/transfer">Profile</a>
+<br /><a href="/transfer">Transfer</a>
 
 <%- include('footer') %>
